<resources>
    <string name="app_name">SoundCloudProject</string>
    <string name="genre_all_music">All Music</string>
    <string name="genre_all_audio">All Audio</string>
    <string name="genre_alternative_rock">Alternative Rock</string>
    <string name="genre_ambient">Ambient</string>
    <string name="genre_classical">Classical</string>
    <string name="genre_country">Country</string>
    <string name="title_home">Home</string>
    <string name="title_download">Download</string>
    <string name="title_library">Library</string>
    <string name="menu_search">Search</string>
    <string name="search_hint">Search track...</string>
    <string name="favorites">Favorites</string>
    <string name="playlists">Playlists</string>
    <string name="tracks">Tracks</string>
    <string name="songs">Songs</string>
    <string name="default_track_name">Unknown track</string>
    <string name="default_author">Unknown author</string>
    <string name="default_duration">00:00</string>
    <string name="msg_save_changes">Save changes</string>
    <string name="msg_added">Added</string>
    <string name="msg_deleted">Deleted</string>
    <string name="msg_success">Successful</string>
    <string name="error">Error</string>
    <string name="error_load_data">Can\'t load data</string>
    <string name="error_track_not_exist">Track does not exist</string>
    <string name="error_track_added_favorite">The track was added to favorite</string>
    <string name="error_playlist_not_exist">Playlist does not exist</string>
    <string name="error_permission_denied">Permission denied</string>
    <string name="msg_no_track_available">No track available now</string>
    <string name="action_add_to_next_up">Add to Next up</string>
    <string name="action_add_to_playlist">Add to Playlist</string>
    <string name="action_add_to_favorite">Add to Favorite</string>
    <string name="action_download">Download</string>
    <string name="action_show_playlist">Playlist</string>
    <string name="action_play">Play</string>
    <string name="action_delete">Delete</string>
    <string name="action_remove">Remove</string>
    <string name="channel_name">my_package_channel</string>
    <string name="channel_description">my_package_first_channel</string>
    <string name="channel_id">my_package_channel_1</string>
    <string name="next_up">Next up</string>
    <string name="msg_download_error">Download Error</string>
    <string name="msg_downloading">Downloading</string>
    <string name="msg_sleeping">Sleeping in %d minutes</string>
    <string name="msg_cancel_sleeping">Cancel Sleeping</string>
    <string name="error_copyright">Can\'t download track due to copyright</string>
    <string name="sleep_timer">SLEEP TIMER</string>
    <string name="start">START</string>
    <string name="stop">STOP</string>
    <string name="miles_5">5</string>
    <string name="miles_15">15</string>
    <string name="miles_30">30</string>
    <string name="miles_45">45</string>
    <string name="miles_60">60</string>
    <string name="miles_120">120</string>
    <string name="msg_removed">Removed</string>
</resources>
