<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/text_sleep_timer"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_8"
        android:layout_marginStart="@dimen/dp_8"
        android:gravity="center"
        android:text="@string/sleep_timer"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guide_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <SeekBar
        android:id="@+id/seek_bar_timer"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_5"
        android:layout_marginStart="@dimen/dp_5"
        android:layout_marginTop="@dimen/dp_22"
        android:max="5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_line" />

    <TextView
        android:id="@+id/text_timer_start"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_32"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_55"
        android:background="@drawable/timer_start_background"
        android:gravity="center"
        android:text="@string/start"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/text_timer_stop"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seek_bar_timer" />

    <TextView
        android:id="@+id/text_miles_5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_20"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/miles_5"
        android:textSize="@dimen/sp_11"
        app:layout_constraintEnd_toStartOf="@+id/text_miles_15"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_chainStyle="spread_inside"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_line"
        app:layout_constraintVertical_chainStyle="packed" />

    <TextView
        android:id="@+id/text_miles_15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/miles_15"
        android:textSize="@dimen/sp_11"
        app:layout_constraintEnd_toStartOf="@+id/text_miles_30"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_miles_5"
        app:layout_constraintTop_toTopOf="@+id/guide_line" />

    <TextView
        android:id="@+id/text_miles_30"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/miles_30"
        android:textSize="@dimen/sp_11"
        app:layout_constraintEnd_toStartOf="@+id/text_miles_45"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_miles_15"
        app:layout_constraintTop_toTopOf="@+id/guide_line" />

    <TextView
        android:id="@+id/text_miles_45"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/miles_45"
        android:textSize="@dimen/sp_11"
        app:layout_constraintEnd_toStartOf="@+id/text_miles_60"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_miles_30"
        app:layout_constraintTop_toTopOf="@+id/guide_line" />

    <TextView
        android:id="@+id/text_miles_60"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/miles_60"
        android:textSize="@dimen/sp_11"
        app:layout_constraintEnd_toStartOf="@+id/text_miles_120"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_miles_45"
        app:layout_constraintTop_toTopOf="@+id/guide_line" />

    <TextView
        android:id="@+id/text_miles_120"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginEnd="@dimen/dp_13"
        android:layout_marginTop="@dimen/dp_8"
        android:text="@string/miles_120"
        android:textSize="@dimen/sp_11"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/text_miles_60"
        app:layout_constraintTop_toTopOf="@+id/guide_line" />

    <android.support.constraint.Guideline
        android:id="@+id/guide_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <TextView
        android:id="@+id/text_timer_stop"
        android:layout_width="0dp"
        android:layout_height="@dimen/dp_32"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginStart="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_32"
        android:background="@drawable/timer_stop_background"
        android:gravity="center"
        android:text="@string/stop"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toBottomOf="@+id/text_timer_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/text_timer_start"
        app:layout_constraintTop_toTopOf="@+id/text_timer_start"
        app:layout_constraintVertical_bias="1.0" />
</android.support.constraint.ConstraintLayout>
